# loggerxxi

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: 01_hello.cpp  02_advanced.cpp
include/loggerxxi/: logger.hpp
include/logxxi/: logger.hpp
